# mascaf

./: .gitignore  CITATION.cff  PARALLEL_OPTIMIZATION.md  README.md  pyproject.toml
data/: test_skeleton_graph_output.polylines.txt  test_skeleton_processed.polylines.txt
docs/: PARALLEL_OPTIMIZATION.md  multi_tangent_radius_explanation.md  radius_optimization.md
examples/: constraint_modes_demo.py  make_demo_meshes.py  parallel_optimization_demo.py  radius_normalization_example.py  radius_optimization_demo.py  skeleton_optimization_demo.py
mascaf/: __init__.py  graph_fitting.py  mesh.py  morphology_graph.py  skeleton_optimizer.py  validation.py
mcf2swc/: __init__.py  graph_fitting.py  mesh.py  morphology_graph.py  parallel_skeleton_optimizer.py  polylines.py  radius_optimizer.py  radius_optimizer_local.py  skeleton.py  skeleton_optimizer.py  skeleton_viz.bak  swc_fitting.py  trace.py  validation.py
mcf2swc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: 02a_cylinder_skeleton.ipynb  02b_torus_skeleton.ipynb  02d_TS2_skeleton.ipynb  02e_TS1_skeleton copy.ipynb  02e_TS1_skeleton.ipynb  TS21_morpho.ipynb  TS2_morpho.ipynb  TS67_morpho.ipynb  TS76_morpho.ipynb  demo_cylinder_skeleton.ipynb  demo_torus_skeleton.ipynb  demo_trace.ipynb  demo_viz.ipynb
package_references/: SWCTOOLS_REFERENCE.md
scripts/: benchmark_parallel_optimizer.py  benchmark_parallel_skeleton.py  debug_centering_force.py  debug_near_surface.py  debug_optimizer.py  debug_optimizer_detailed.py  debug_optimizer_offset.py  debug_optimizer_vertical.py  debug_real_skeleton.py  (+8 more)
(+130 files in other folders)
