[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "mascaf"
version = "0.1.0"
description = "MaSCaF (Mesh and Skeleton Cable Fitting): mesh + MCF skeleton to SWC morphology models."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "jupyter-server>=2.17.0",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "networkx>=3.5",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pytest>=9.0.2",
    "rtree>=1.4.1",
    "scipy>=1.16.1",
    "shapely>=2.1.1",
    "swctools",
    "trimesh>=4.8.1",
]

[tool.uv.sources]
swctools = { git = "https://github.com/jmrfox/swctools.git" }

[tool.pytest.ini_options]
addopts = "--ignore=tests/test_parallel_skeleton_optimizer.py"
